fix: tab content is sometimes cut off (e.g. dropdowns)
affects: @haulmont/jmix-react-antd

--- a/packages/jmix-react-antd/src/ui/Tabs/styles.module.less
+++ b/packages/jmix-react-antd/src/ui/Tabs/styles.module.less
@@ -12,6 +12,9 @@
   .closeButton {
     padding: 2px;
   }
+  :global(.ant-tabs) {
+    height: 100%;
+  }
   :global(.ant-tabs-tab-btn) {
     transition: none;
     padding-left: 2px;
